--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ header h1{
 }
 
 header h2{
-    font-family: Calibri,sans-serif;
+    font-family: "Ink Free", sans-serif;
     font-size: 2.5rem;
     padding: 2%;
 }
