--- a/css/info.css
+++ b/css/info.css
@@ -1,3 +1,47 @@
 main figure img{
-    width: 50%;
+    width: 60%;
+}
+#info div{
+    border: solid 1px rgba(139, 0, 0, 0.57);
+    border-radius: 15px;
+    margin: auto;
+    margin-bottom:3% ;
+    width: 60%;
+}
+#info h3{
+    font-family: "Ink Free",sans-serif;
+    font-size: 2.4rem;
+    color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(127, 255, 212, 0.39);
+}
+#info table{
+    margin: auto;
+    text-align: left;
+    font-size: 2rem;
+}
+#info p{
+    margin: auto;
+    font-size: 2rem;
+}
+#info2 {
+    width: 60%;
+    margin: auto;
+}
+#info2 h3{
+    font-family: "Ink Free",sans-serif;
+    font-size: 2.4rem;
+    color: rgba(0, 0, 0, 0.6);
+}
+#info2 p{
+    font-size: 2rem;
+}
+input[type="submit"]{
+    width:40%;
+    height:60px;
+    padding: 2%;
+    background-color: rgba(144, 238, 144, 0.75);
+    border-radius:10px;
+    font-size:1.8rem;
+    font-family: "Comic Sans MS",sans-serif;
+    vertical-align: center;
 }
