--- a/css/photo.css
+++ b/css/photo.css
@@ -3,32 +3,46 @@ main section{
     padding-bottom: 1%;
 }
 main section figure{
-    width: 70%;
-    height: 300px;
+    width: 80%;
+    height: 400px;
+    background-color: rgba(211, 211, 211, 0.47);
     margin: auto;
-    border: solid 1px deeppink;
+    border: solid 1px rgba(139, 0, 0, 0.61);
+    border-radius: 15px;
     margin-top: 1%;
     padding-top: 1%;
     padding-bottom: 1%;
 }
-main section figure a {
-    padding-left: 2%;
-    vertical-align: top;
-    width: 40%;
-}
+
 main section figure img{
-    max-width:220px;
-    max-height: 220px;
+    width:300px;
+    height: 300px;
     overflow: hidden;
 }
 main section figure figcaption{
-    vertical-align: top;
-    width: 50%;
     overflow:hidden;
     display:-webkit-box;
     -webkit-line-clamp:1;
     -webkit-box-orient: vertical;
+    font-size: 2rem;
+}
+main section figure figcaption h3{
+    font-size: 3rem;
+    font-family: "Ink Free",sans-serif;
 }
 main>section>figure>a,main>section>figure>figcaption{
-    display: inline-block;
+    display: inline;
+}
+#figure input{
+    margin-top: 2%;
+    margin-right: 2%;
+    width: 25%;
+    border-radius: 10px;
+    font-size: 2.2rem;
+}
+#figure input[value="Modify"]{
+    background-color: rgba(23, 53, 186, 0.71);
+}
+#figure input[value="Delete"]{
+    background-color: rgba(144, 238, 144, 0.72);
 }
