--- a/css/register.css
+++ b/css/register.css
@@ -63,10 +63,10 @@ fieldset div{
     padding: 2%;
 }
 
-fieldset div.info label input{
+fieldset div label input{
     margin: auto;
     width:60%;
-    height: 55px;/*这里设置百分比高度不变化，不知道问题出在哪里，有空得问一下*/
+    height: 55px;
     font-size: 1.5rem;
     border-radius:15px;
 }
@@ -94,4 +94,15 @@ footer{
 ::placeholder{
     font-family: Cambria,sans-serif;
     font-size: 1.5rem;
+}
+input[type="submit"]{
+    width:40%;
+    height:60px;
+    padding: 2%;
+    background-color: bisque;
+    border-radius:10px;
+    font-size:1.8rem;
+    font-family: "Comic Sans MS",sans-serif;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
