--- a/css/upload.css
+++ b/css/upload.css
@@ -1,106 +1,68 @@
 fieldset{
-    border: 0.1rem dashed #d4237a;
-    width: 90%;
+    background-color: rgba(211, 211, 211, 0.53);
+    border: 1px dashed rgba(139, 0, 0, 0.62);
+    width: 80%;
     min-height: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 0.7rem;
+    margin: auto;
+    border-radius: 15px;
     margin-bottom: 2%;
 }
+.uploadPic{
+    margin:auto;
+    width: 70%;
+    height: 300px;
+    background-color: white;
+    border-radius: 10px;
+}
 legend{
-    font-size: 2.5vw;
-    margin-left: auto;
-    margin-right: auto;
-}
-div.uploadPic{
-    margin: 2% 5.5% 5.5%;
-    width: 90%;
-    min-height: 300px;
-    border: 0.1rem dashed lightgrey;
-    border-radius: 0.6rem;
-    text-align: center;
-}
-img#PicFromUser{
-    padding-top: 1%;
-    width: auto;
-    max-width: 98%;
-}
-p#placeholder{
-    margin-top: 18%;
-    color: #5d5d5d;
-}
-div.wrap{
-    width: 20%;
-    margin-left: 40%;
-    position:relative;
-    overflow:hidden;
-    display:inline-block;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    text-align:center;
-    vertical-align:middle;
-    cursor:pointer;
-    background: #142b9c;
-    border-radius: 0.6rem;
-}
-div.wrap:hover{
-    background: #1735ba;
-}
-.wrap span{
-    color: whitesmoke;
-    font-size: 1.7vw;
-}
-input[type="file"]{
-    position:absolute;
-    top:0;
-    right:0;
-    margin:0;
-    border:solid transparent;
-    opacity:0;
-    filter:alpha(opacity=0);
-    cursor: pointer;
+    font-size: 2.5rem;
+    margin: auto;
 }
 label{
     display: block;
     margin-bottom: 2%;
-    margin-left: 5%;
-    font-size: 2vw;
+    font-size: 2rem;
     font-weight: bold;
     color: #13227a;
 }
 label,input[type="text"]{
+    border-radius: 10px;
     display: block;
 }
 label,textarea{
     display: block;
 }
-input[type="text"]{
-    width: 90%;
-    height: 30px;
-    font-size: 1.6vw;
-    padding-left: 0.5%;
-    margin-top: 1%;
-}
 textarea{
-    margin-top: 2%;
-    width: 90%;
-    height: 200px;
-    resize: none;
-    font-size: 1.6vw;
-    padding-left: 0.5%;
+    width: 70%;
+    height: 50%;
+    font-size: 1.6rem;
+    margin:auto;
+    margin-top: 1%;
+    border-radius: 10px;
+}
+input[type="text"]{
+    width: 70%;
+    height: 20%;
+    font-size: 1.6rem;
+    margin:auto;
+    margin-top: 1%;
+    border-radius: 10px;
+}
+input[type="file"]{
+    width: 40%;
+    height:20%;
+    font-size: 1.7rem;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border-radius: 10px;
 }
 input[type="button"]{
-    float: right;
     margin-bottom: 2%;
     width: 20%;
     margin-right: 5%;
-    font-size: 1.7vw;
+    font-size: 1.7rem;
     padding-top: 1%;
     padding-bottom: 1%;
-    color: whitesmoke;
-    background-color: #c2226d;
-    border-radius: 0.6rem;
-}
-input[type="button"]:hover{
-    background-color: #da2181;
+    background-color: rgba(100, 149, 237, 0.71);
+    border-radius: 10px;
 }
